feat: 添加SEO优化元素，包括meta标签和结构化数据

--- a/index.html
+++ b/index.html
@@ -3,7 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>海南自贸区公益大赛新闻 - 东方卫视</title>
+  <title>海南自贸区公益大赛新闻 - 东方卫视 | 最新海南新闻资讯</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="海南自贸区公益大赛新闻频道，提供最新海南自贸区公益大赛相关资讯、报道和深度分析。东方卫视专业新闻团队实时更新海南新闻动态。">
+  <meta name="keywords" content="海南自贸区, 公益大赛, 新闻, 东方卫视, 海南新闻, 公益新闻, 数字公益, 科技慈善">
+  <meta name="author" content="东方卫视">
+  <meta name="robots" content="index, follow">
+  <meta name="googlebot" content="index, follow">
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://dongfangxinwen.vercel.app/">
+  <meta property="og:title" content="海南自贸区公益大赛新闻 - 东方卫视">
+  <meta property="og:description" content="海南自贸区公益大赛新闻频道，提供最新海南自贸区公益大赛相关资讯、报道和深度分析。">
+  <meta property="og:image" content="/public/favicon-dongfang.svg">
+  <meta property="og:site_name" content="东方卫视新闻">
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://dongfangxinwen.vercel.app/">
+  <meta property="twitter:title" content="海南自贸区公益大赛新闻 - 东方卫视">
+  <meta property="twitter:description" content="海南自贸区公益大赛新闻频道，提供最新海南自贸区公益大赛相关资讯、报道和深度分析。">
+  <meta property="twitter:image" content="/public/favicon-dongfang.svg">
   <link rel="icon" type="image/svg+xml" href="/favicon-dongfang.svg">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
